windows compatible fix